--- a/JavaFX/MVC_JavaFX/src/view/RootLayout.fxml
+++ b/JavaFX/MVC_JavaFX/src/view/RootLayout.fxml
@@ -5,19 +5,23 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RootLayoutController">
    <top>
-      <MenuBar BorderPane.alignment="CENTER">
+      <MenuBar fx:id="myMenuBar" BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
+              <MenuItem mnemonicParsing="false" onAction="#exitMenuItem" text="Close" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Operations" />
+          <Menu mnemonicParsing="false" text="Operations">
+               <items>
+                  <MenuItem fx:id="menuEmployee" mnemonicParsing="false" onAction="#loadEmployeeScreen" text="Employee" />
+                  <MenuItem fx:id="menuJob" mnemonicParsing="false" onAction="#loadJobScreen" text="Jobs" />
+               </items></Menu>
           <Menu mnemonicParsing="false" text="Help">
             <items>
-              <MenuItem mnemonicParsing="false" text="About" />
+              <MenuItem mnemonicParsing="false" onAction="#loadHelpScreen" text="About" />
             </items>
           </Menu>
         </menus>
